...
            "state": "translated",
            "value": "Adicione uma nota (opcional)"
          }
        }
      }
    },
    "Add today's score": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Heutige Wertung hinzufügen"
...
            "state": "translated",
            "value": "Excluir"
          }
        }
      }
    },
    "delete.left": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "delete.left"
...
            "state": "translated",
            "value": "delete.left"
          }
        }
      }
    },
    "Done": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Fertig"
...
            "state": "translated",
            "value": "VARIAÇÃO DO HUMOR"
          }
        }
      }
    },
    "Feed": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Feed"
...
            "state": "translated",
            "value": "MVP"
          }
        }
      }
    },
    "My Page": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "マイページ"
          }
...
            "state": "translated",
            "value": "Qual é o seu Scoor?"
          }
        }
      }
    },
    "World": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Welt"
...
            "state": "translated",
            "value": "Tentar de novo"
          }
        }
      }
    },
    "닫기": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Schließen"
...
            "state": "translated",
            "value": "Os fins de semana têm média cerca de 10 pontos maior"
          }
        }
      }
    },
    "Home": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
...
